--- a/ascii-rpg/Makefile
+++ b/ascii-rpg/Makefile
@@ -1,5 +1,5 @@
-output: game.o display.o creatures.o
-	g++ game.o terminal-display.o player.o enemy.o -o m 
+output: game.o display.o items.o creatures.o 
+	g++ game.o terminal-display.o player.o enemy.o items.o -o m 
 
 game.o: game.cpp
 	g++ -c game.cpp
@@ -9,6 +9,9 @@ display.o: terminal-display.cpp terminal-display.h
 
 creatures.o: player.cpp enemy.cpp creature.cpp creatures.h
 	g++ -c player.cpp enemy.cpp creature.cpp
+
+items.o: items.cpp items.h
+	g++ -c items.cpp
 
 clean:
 	rm *.o m
